<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnNum3"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:onClick="btn_Num3"
        android:text="@string/txt_btn_num3"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/btnNum2"
        app:layout_constraintTop_toBottomOf="@+id/btnNum6" />

    <Button
        android:id="@+id/btnSuma"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="15dp"
        android:onClick="btn_suma"
        android:text="@string/txt_btn_suma"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/btnNum2"
        app:layout_constraintTop_toBottomOf="@+id/btnResta" />

    <Button
        android:id="@+id/btnPunto"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:onClick="btn_Punto"
        android:text="@string/txt_btn_punto"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/btnNum2"
        app:layout_constraintTop_toBottomOf="@+id/btnNum3" />

    <Button
        android:id="@+id/btnIgual"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:onClick="btn_igual"
        android:text="@string/txt_btn_igual"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/btnPunto"
        app:layout_constraintTop_toBottomOf="@+id/btnSuma" />

    <Button
        android:id="@+id/btnNum0"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:onClick="btn_Num0"
        android:text="@string/txt_btn_num0"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/btnMasMenos"
        app:layout_constraintTop_toBottomOf="@+id/btnNum2" />

    <Button
        android:id="@+id/btnNum2"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:onClick="btn_Num2"
        android:text="@string/txt_btn_num2"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/btnNum1"
        app:layout_constraintTop_toBottomOf="@+id/btnNum5" />

    <Button
        android:id="@+id/btnMasMenos"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="15dp"
        android:onClick="btn_MasMenos"
        android:text="@string/txt_btn_masmenos"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNum1" />

    <Button
        android:id="@+id/btnNum1"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="15dp"
        android:onClick="btn_Num1"
        android:text="@string/txt_btn_num1"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNum4" />

    <Button
        android:id="@+id/btnNum4"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="15dp"
        android:onClick="btn_Num4"
        android:text="@string/txt_btn_num4"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNum7" />

    <Button
        android:id="@+id/btnCE"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="15dp"
        android:text="@string/txt_btn_CE"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPorcentaje" />

    <Button
        android:id="@+id/btnNum7"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="15dp"
        android:onClick="btn_Num7"
        android:text="@string/txt_btn_num7"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCE" />

    <Button
        android:id="@+id/btnUnoX"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="156dp"
        android:onClick="btn_UnoX"
        android:text="@string/txt_btn_unoX"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/btnCuadrado"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCuadrado"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="156dp"
        android:onClick="btn_Cuadrado"
        android:text="@string/txt_btn_cuadrado"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/btnRaiz"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnBorrar"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/txt_btn_borrar"
        android:textSize="34sp"
        app:layout_constraintStart_toEndOf="@+id/btnC"
        app:layout_constraintTop_toBottomOf="@+id/btnCuadrado" />

    <Button
        android:id="@+id/btnDivision"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="15dp"
        android:onClick="btn_Dividir"
        android:text="@string/txt_btn_dividir"
        android:textSize="34sp"
        app:layout_constraintStart_toEndOf="@+id/btnC"
        app:layout_constraintTop_toBottomOf="@+id/btnUnoX" />

    <Button
        android:id="@+id/btnNum9"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:onClick="btn_Num9"
        android:text="@string/txt_btn_num9"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/btnNum8"
        app:layout_constraintTop_toBottomOf="@+id/btnBorrar" />

    <Button
        android:id="@+id/btnMulti"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="15dp"
        android:onClick="btn_Multi"
        android:text="@string/txt_btn_multi"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/btnNum8"
        app:layout_constraintTop_toBottomOf="@+id/btnDivision" />

    <Button
        android:id="@+id/btnNum6"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:onClick="btn_Num6"
        android:text="@string/txt_btn_num6"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/btnNum5"
        app:layout_constraintTop_toBottomOf="@+id/btnNum9" />

    <Button
        android:id="@+id/btnResta"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="15dp"
        android:onClick="btn_Resta"
        android:text="@string/txt_btn_resta"
        android:textSize="34sp"
        app:layout_constraintStart_toEndOf="@+id/btnNum5"
        app:layout_constraintTop_toBottomOf="@+id/btnMulti" />

    <TextView
        android:id="@+id/textView_Calc"
        android:layout_width="335dp"
        android:layout_height="111dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/darker_gray"
        android:gravity="right|center_horizontal"
        android:text="@string/txt_pantallaCalc"
        android:textColor="@color/black"
        android:textSize="60sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnPorcentaje"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="156dp"
        android:onClick="btn_Porcentaje"
        android:text="@string/txt_btn_porcentaje"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRaiz"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="156dp"
        android:onClick="btn_Raiz"
        android:text="@string/txt_btn_raiz"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/btnPorcentaje"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnC"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/txt_btn_C"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/btnCE"
        app:layout_constraintTop_toBottomOf="@+id/btnRaiz" />

    <Button
        android:id="@+id/btnNum8"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:onClick="btn_Num8"
        android:text="@string/txt_btn_num8"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/btnNum7"
        app:layout_constraintTop_toBottomOf="@+id/btnC" />

    <Button
        android:id="@+id/btnNum5"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:onClick="btn_Num5"
        android:text="@string/txt_btn_num5"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/btnNum4"
        app:layout_constraintTop_toBottomOf="@+id/btnNum8" />

</androidx.constraintlayout.widget.ConstraintLayout>